# real-time-sqlx

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  bun.lockb  flake.nix
crates/real-time-sqlx/: Cargo.toml  README.md
crates/real-time-sqlx/src/: backends.rs  database.rs  display.rs  error.rs  lib.rs  macros.rs  operations.rs  queries.rs  serialize.rs  tests.rs  utils.rs
crates/real-time-sqlx/src/backends/: tauri.rs
crates/real-time-sqlx/src/backends/tauri/: channels.rs  macros.rs
crates/real-time-sqlx/src/database/: mysql.rs  postgres.rs  sqlite.rs
crates/real-time-sqlx/src/operations/: serialize.rs
crates/real-time-sqlx/src/queries/: display.rs  serialize.rs
crates/real-time-sqlx/src/tests/: dummy.rs  engine.rs  operations.rs  queries.rs  utils.rs
crates/real-time-sqlx/src/tests/operations/: 01_create.json  02_create_many.json  03_update.json  04_delete.json
crates/real-time-sqlx/src/tests/queries/: 01_single.json  02_many.json  03_single_with_condition.json  04_many_with_condition.json  05_nested_or.json  06_empty.json  07_in.json  08_paginated_single.json  09_paginated_many.json
crates/real-time-sqlx/src/tests/sql/: 01_create.sql  02_insert.sql
docs/: real-time-engine.excalidraw.md
