[package]
name = "real-time-sqlx"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dev-dependencies]
real-time-sqlx = { path = ".", features = ["postgres", "mysql", "sqlite"] }


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [] }
