[package]
name = "real-time-sqlx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GnRlLeclerc/real-time-sqlx"
authors = ["Thibaut de Saivre"]
description = "Real-time SQLx backend for Tauri"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["database", "async", "real-time", "tauri", "sqlite"]
categories = ["database", "asynchronous"]

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
tauri = ["dep:tauri", "dep:tokio"]

[dev-dependencies]
real-time-sqlx = { path = ".", features = [
  "postgres",
  "mysql",
  "sqlite",
  "tauri",
] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }

[dependencies]
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [] }
thiserror = "2"
tauri = { version = "2", features = [], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
